--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,10 +1,8 @@
 FROM   debian:buster
+EXPOSE 443
+COPY start.sh .
+RUN  sh start.sh
 
-COPY setup.sh .
-
-RUN  sh setup.sh
-
-RUN  apt install -y nmap
 COPY default etc/nginx/sites-available/default
 COPY  nginx-selfsigned.key  /etc/ssl/private/
 COPY  nginx-selfsigned.crt  /etc/ssl/certs/
