--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -16,13 +16,13 @@ services:
       - wordpress:/var/www/wordpress
   
   mariadb:
-    build : ./requirements/mariadb/
+    build : ./requirements/mariadb
     restart : always
     ports:
         - "3306:3306"
     privileged : true
     volumes :
-      - mariadb:/var/lib/mysql
+      - mariadb:/var/lib/mysql/
     env_file :
       - .env
     networks :
@@ -31,7 +31,7 @@ services:
     image : "mariadb"
 
   wordpress :
-    build : ./requirements/wordpress/
+    build : ./requirements/wordpress
     env_file : 
       - .env
     restart : always
@@ -64,4 +64,3 @@ volumes:
         type: 'none'
         o: 'bind'
         device: '/home/matraore/data/wordpress'
-
