--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -5,9 +5,10 @@ RUN apt upgrade -y
 RUN apt install nginx vim curl -y
 COPY tools/server.crt /etc/nginx/ssl/
 COPY tools/server.key /etc/nginx/ssl/
+COPY  tools/default /etc/nginx/sites-available/
 
-COPY  tools/config etc/nginx/sites-available/default
 
-RUN echo "127.0.0.1 matraore.42.fr" > /etc/hosts
+
+# RUN echo "127.0.0.1 matraore.42.fr" >> /etc/hosts
 
 CMD ["nginx", "-g", "daemon off;"]
