--- a/srcs/.env
+++ b/srcs/.env
@@ -1,7 +1,7 @@
 # DN
 DOMAIN_NAME=matraore.42.fr
 
-# DB Setup
+# DB Setupls
 DATABASE=wordpress
 
 DB_USER=MATRAORE
@@ -15,7 +15,13 @@ DB_USER_PASS=libre
 WP_ADMIN_USER=ackermann
 WP_ADMIN_PASS=ackermann
 WP_ADMIN_MAIL=moctar@ackermann.com
-WP_DB_NAME=wordpress
+
+
 WP_USER=mamadou
 WP_USER_MAIL=mamadou@mail.com
 WP_USER_PASS=mamadou
+
+
+WP_DB_NAME=wordpress
+WP_DB_USER=MATRAORE
+WP_DB_PASS=moctar
